--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 <style>
 body{
   margin:0;
-  font-family:Arial;
-  background:linear-gradient(120deg,#1f4037,#99f2c8);
+  font-family: 'Segoe UI', sans-serif;
+  background:linear-gradient(135deg,#141e30,#243b55);
+  color:white;
 }
 .box{
   max-width:520px;
-  margin:20px auto;
+  margin:25px auto;
   background:rgba(0,0,0,0.6);
-  color:white;
   padding:20px;
-  border-radius:16px;
+  border-radius:18px;
+  box-shadow:0 0 20px rgba(0,0,0,0.6);
 }
-h2{text-align:center}
+h2{text-align:center;color:#6ee7b7}
 input,button,select{
   width:100%;
   padding:12px;
@@ -41,7 +42,7 @@ button{
   background:#6ee7b7;
   color:#012;
 }
-.chat{min-height:90px;margin-bottom:10px}
+.chat{min-height:80px;margin-bottom:10px}
 .msg{margin:6px 0}
 .user{text-align:right;color:#6ee7b7}
 .bot{color:#ccc}
@@ -61,12 +62,12 @@ button{
   <div id="chat" class="chat"></div>
 
   <div id="step1">
-    <input id="name" placeholder="Enter your name">
+    <input id="nameInput" placeholder="Enter your name">
     <button onclick="next1()">Next</button>
   </div>
 
   <div id="step2" style="display:none">
-    <input id="marks" type="number" placeholder="Enter 12th percentage">
+    <input id="marksInput" type="number" placeholder="Enter 12th percentage">
     <button onclick="next2()">Next</button>
   </div>
 
@@ -86,13 +87,13 @@ button{
 
   <div id="step4" style="display:none">
     <p>Select your main interest:</p>
-    <select id="interest">
+    <select id="interestSelect">
       <option>Technology</option>
       <option>Medical</option>
       <option>Business</option>
       <option>Creative</option>
       <option>Research</option>
-      <option>Service & Government</option>
+      <option>Government & Service</option>
     </select>
     <button onclick="finalStep()">Get Suggestions</button>
   </div>
@@ -103,95 +104,100 @@ button{
 <script>
 let name="", marks=0, subjects=[], interest="";
 
-function addMsg(t,w){
+function addMsg(text, who){
   let d=document.createElement("div");
-  d.className="msg "+w;
-  d.innerText=t;
-  chat.appendChild(d);
+  d.className="msg "+who;
+  d.innerText=text;
+  document.getElementById("chat").appendChild(d);
 }
 
 function next1(){
-  name=nameInput.value;
-  if(!name)return;
+  name = document.getElementById("nameInput").value;
+  if(!name) return;
   addMsg(name,"user");
   addMsg("Hi "+name+"!","bot");
   step1.style.display="none";
   step2.style.display="block";
 }
+
 function next2(){
-  marks=marksInput.value;
-  if(!marks)return;
+  marks = document.getElementById("marksInput").value;
+  if(!marks) return;
   addMsg(marks+"%","user");
   addMsg("Choose your favourite subjects:","bot");
   step2.style.display="none";
   step3.style.display="block";
 }
+
 function toggleSub(btn,sub){
   if(subjects.includes(sub)){
-    subjects=subjects.filter(s=>s!==sub);
+    subjects = subjects.filter(s=>s!==sub);
     btn.classList.remove("active");
   }else{
     subjects.push(sub);
     btn.classList.add("active");
   }
 }
+
 function next3(){
-  if(subjects.length==0)return;
+  if(subjects.length==0) return;
   addMsg(subjects.join(", "),"user");
-  addMsg("Now select your main interest:","bot");
+  addMsg("Select your main interest:","bot");
   step3.style.display="none";
   step4.style.display="block";
 }
+
 function finalStep(){
-  interest=interestSelect.value;
+  interest = document.getElementById("interestSelect").value;
   addMsg(interest,"user");
   showCourses();
 }
 
-function courseCard(title,info){
+function course(title,info){
   return `<div class="courseBox"><h3>${title}</h3><p>${info}</p></div>`;
 }
 
 function showCourses(){
   let out="";
   if(interest=="Technology"){
-    out+=courseCard("Engineering / B.Tech",
-    "Focuses on technology, machines and software. Includes branches like CSE, AI, Mechanical and ECE. Needs maths and physics. Jobs in IT, core companies and startups. High demand worldwide. Salary grows fast. Requires strong logic skills. Good for innovation lovers.");
-    out+=courseCard("BCA",
-    "Computer applications degree. Teaches coding, web and apps. Less maths than engineering. Good for software jobs. Can do MCA later. Works well with computer interest. Affordable in many colleges. Good for IT career start.");
+    out+=course("B.Tech / Engineering",
+    "Focuses on machines, software and innovation. Includes CSE, AI, ECE, Mechanical. Needs maths & physics. High demand worldwide. Jobs in IT and core companies. Salary grows fast. Good for problem solvers.");
+    out+=course("BCA",
+    "Computer applications course. Coding, web and apps. Less tough than engineering. Can do MCA later. Good IT career. Many job options.");
   }
   if(interest=="Medical"){
-    out+=courseCard("MBBS",
-    "Doctor degree. Needs biology and high marks. Long study but respected career. High social value. Jobs in hospitals and clinics. Good income after experience. Requires patience and dedication.");
-    out+=courseCard("Nursing / Pharmacy",
-    "Healthcare support careers. Shorter than MBBS. Jobs in hospitals, clinics and abroad. Good for biology students. Stable and respected profession. Growing demand.");
+    out+=course("MBBS",
+    "Doctor degree. Needs biology and high marks. Long study but respected. High social value. Works in hospitals and clinics. Good income later.");
+    out+=course("Nursing / Pharmacy",
+    "Healthcare support. Shorter than MBBS. Jobs in hospitals and abroad. Stable and respected career.");
   }
   if(interest=="Business"){
-    out+=courseCard("BBA / B.Com",
-    "Business and commerce studies. Teaches finance, management and marketing. Good for business and jobs. Can do MBA later. Useful for startups. Works well with commerce students.");
-    out+=courseCard("CA / CMA / CS",
-    "Professional courses in accounting and law. High respect. Good income. Needs hard work. Suitable for commerce lovers. Great for corporate jobs.");
+    out+=course("BBA / B.Com",
+    "Business and finance studies. Marketing, management, accounts. Can do MBA later. Good for business and jobs.");
+    out+=course("CA / CS / CMA",
+    "Professional courses. High respect and income. Needs hard work. Good corporate career.");
   }
   if(interest=="Creative"){
-    out+=courseCard("Design / Animation",
-    "For creative students. Includes fashion, UI/UX, graphics. Needs portfolio. Jobs in media, IT and marketing. High creativity needed. Fun career.");
-    out+=courseCard("Media / Journalism",
-    "News, content and communication field. Works in TV, online and print. Needs good language skills. Good for social impact.");
+    out+=course("Design / Animation",
+    "Fashion, UI/UX, graphics, animation. Needs creativity. Jobs in media and IT. Fun career.");
+    out+=course("Media / Journalism",
+    "News, content, communication. Works in TV and online. Good for social impact.");
   }
   if(interest=="Research"){
-    out+=courseCard("B.Sc / M.Sc",
-    "Science research path. Physics, chemistry, biology or maths. Leads to scientist or teacher roles. Needs interest in study. Long-term academic career.");
-    out+=courseCard("Biotechnology",
-    "Mix of biology and tech. Used in labs, pharma and research. Growing field. Good for biology lovers.");
+    out+=course("B.Sc / M.Sc",
+    "Science and research path. Leads to scientist or teacher. Needs love for study.");
+    out+=course("Biotechnology",
+    "Biology + tech. Used in labs and pharma. Growing field.");
   }
-  if(interest=="Service & Government"){
-    out+=courseCard("Law",
-    "Legal studies. Jobs as lawyer, judge, legal advisor. Good respect. Needs reading and logic. Works in courts and companies.");
-    out+=courseCard("Civil Services",
-    "UPSC and state exams. High prestige jobs. Needs long preparation. Good for social service.");
+  if(interest=="Government & Service"){
+    out+=course("Law",
+    "Legal studies. Lawyer, judge, advisor. Good respect. Needs reading and logic.");
+    out+=course("Civil Services",
+    "UPSC and state exams. High prestige jobs. Needs long preparation.");
   }
 
-  result.innerHTML="<h3>Hi "+name+", here are your best courses:</h3>"+out;
+  document.getElementById("result").innerHTML =
+    "<h3>Hi "+name+", best courses for you:</h3>"+out;
 }
 </script>
 </body>
